--- a/html/settings.html
+++ b/html/settings.html
@@ -36,13 +36,14 @@
     .settings-page-content {
         background: #111;
         left: 245px;
-        height: 92px;
+        height: calc(100% - 50px);
         margin: 0;
         padding: 0;
         position: fixed;
         text-align: left;
         top: 45px;
         width: 50%;
+        overflow-y: auto;
     }
     .settings-page-content h1 {
         font-size: 2.2em;
