refactor: broke Shopify's code snippet and organized in proper places

--- a/html/index.html
+++ b/html/index.html
@@ -52,6 +52,8 @@
 <script type="text/javascript" src="js/lib/jquery.textareaAutoResize.js?v={{version}}"></script>
 <script type="text/javascript" src="js/lib/arrive.min.js?v={{version}}"></script>
 <script type="text/javascript" src="js/lib/lunr.min.js?v={{version}}"></script>
+<script type="text/javascript" src="js/lib/buy-button-storefront.js"></script>
+<script type="text/javascript" src="js/shopify.js"></script>
 
 <script type="text/javascript">
     {% autoescape None %}
