Send deviceToken attribute to shopify, so device can be identified to generate license

--- a/html/index.html
+++ b/html/index.html
@@ -58,6 +58,7 @@
 <script type="text/javascript">
     {% autoescape None %}
     var TEMPLATES = {}
+    var DEVICE_TOKEN = null
     SITEURL = '{{cloud_url}}'
     PLUGINS_URL      = '{{plugins_url}}'
     PEDALBOARDS_URL  = '{{pedalboards_url}}'
