--- a/html/index.html
+++ b/html/index.html
@@ -243,6 +243,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/cc-manager.js?v={{version}}"></script>
 <script type="text/javascript" src="js/transport.js?v={{version}}"></script>
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
+<script type="text/javascript" src="js/license_manager.js?v={{version}}"></script>
 
 </head>
 <!-- END HEAD -->
