--- a/html/index.html
+++ b/html/index.html
@@ -401,7 +401,7 @@ $('document').ready(function() {
                         </div>
                         <div class="textleft mod-hidden" id="share-window-links">
                             <small>&nbsp;</small>
-                            <h3>Uploaded completed!</h3>
+                            <h3>Upload completed!</h3>
                             <div class="btn-group">
                                 <div class="tooltip top" role="tooltip" id="share-tooltip">
                                     <div class="tooltip-arrow"></div>
