create button to go/return to/from settings screen to main screen. Fixes MD-1533

--- a/html/settings.html
+++ b/html/settings.html
@@ -775,6 +775,9 @@ $('document').ready(function() {
             <div id="tab-advanced" class="add-bank">Advanced</div>
             <div id="tab-device-updates" class="add-bank mod-hidden">Device Updates</div>
             <!--<div id="tab-dangerous" class="add-bank">Dangerous</div>-->
+            <button id="go-back">
+                <a href="/">Go back</a>
+            </button>
         </div>
         <!-- END BANK|SETTINGS-LIST -->
 
