--- a/html/index.html
+++ b/html/index.html
@@ -131,6 +131,7 @@ $('document').ready(function() {
         devicesIcon: $('#mod-devices'),
         devicesWindow: $('#mod-devices-window'),
         statusIcon: $('#mod-status'),
+        settingsIcon: $('#mod-settings'),
         upgradeIcon: $('#mod-update'),
         upgradeWindow: $('#mod-upgrade'),
         bypassLeftButton: $("#mod-bypassLeft"),
@@ -555,6 +556,7 @@ $('document').ready(function() {
         <div id="mod-update" class="status icon"></div>
         <div id="mod-status" class="status icon mod-hidden"></div>
         <div id="mod-devices" class="status icon"></div>
+        <div id="mod-settings" class="status icon mod-settings"></div>
         <div id="mod-ram" class="icon">
             <div class="progress" id="ram-bar" style="width: 100%;">
                 <div class="bar"></div> <!-- not sure if this is needed -->
