fix: return link in settings page didn't work in firefox. MD-1533

--- a/html/settings.html
+++ b/html/settings.html
@@ -775,9 +775,7 @@ $('document').ready(function() {
             <div id="tab-advanced" class="add-bank">Advanced</div>
             <div id="tab-device-updates" class="add-bank mod-hidden">Device Updates</div>
             <!--<div id="tab-dangerous" class="add-bank">Dangerous</div>-->
-            <button id="go-back">
-                <a href="/">Go back</a>
-            </button>
+            <a href="/" id="go-back"><span class="icon-return"></span>Go back</a>
         </div>
         <!-- END BANK|SETTINGS-LIST -->
 
