Tooltips on main menu

--- a/html/index.html
+++ b/html/index.html
@@ -548,10 +548,10 @@ $('document').ready(function() {
 
     <!-- MAIN MENU-->
     <div id="main-menu" class="mod-init-hidden">
-        <div id="mod-plugins" class="icon selected"></div>
-        <div id="mod-pedalboard" class="icon"></div>
-        <div id="mod-bank" class="icon"></div>
-        <div id="mod-cloud-plugins" class="icon"></div>
+        <div id="mod-plugins" class="icon selected" data-message="Constructor"></div>
+        <div id="mod-pedalboard" class="icon" data-message="Pedalboards Library"></div>
+        <div id="mod-bank" class="icon" data-message="Banks"></div>
+        <div id="mod-cloud-plugins" class="icon" data-message="Plugin Store"></div>
         <div id="banks-saving">Auto saving banks...</div>
         <div id="mod-update" class="status icon"></div>
         <div id="mod-status" class="status icon mod-hidden"></div>
