there's only one featured box that remains fixed whatever filter is applied

--- a/html/index.html
+++ b/html/index.html
@@ -690,7 +690,12 @@ $('document').ready(function() {
             </div>
 
             <div class="cloud-plugins clearfix js-cloud-plugins">
-                <div id="cloudplugin-results-wrapper">
+              <div id="cloudplugin-results-wrapper">
+				    <div class="featured-plugins">
+					  <h2>Featured plugins</h2>
+					  <div class="carousel"></div>
+					</div>
+					<h2>Filtered results</h2>
                     <div id="cloud-plugin-content-All" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Delay" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Distortion" class="plugins-wrapper"></div>
