--- a/html/settings.html
+++ b/html/settings.html
@@ -655,13 +655,7 @@ $('document').ready(function() {
     })
 
     $("#prefs-ui-unstable-plugins").click(function () {
-        var checked = $(this).prop("checked")
-        if (checked && !confirm("Installing non-stable plugins is unsupported, expect things to break.\n"
-                               +"Are you sure you want to continue?")) {
-            $(this).prop("checked", false)
-            return
-        }
-        config_set("show-unstable-plugins", bool2str(checked))
+        config_set("show-unstable-plugins", bool2str($(this).prop("checked")))
     })
 
     // ----------------------------------------------------------------------------------------------------------------
@@ -945,7 +939,7 @@ $('document').ready(function() {
                     </p>
                     <label>
                         <input type="checkbox" autocomplete="off" id="prefs-ui-unstable-plugins">
-                            Show beta in Plugin Store
+                            Show beta plugins in the Store
                         </input>
                     </label>
                     <p>
