Rename checkbox 'show stable' to 'show beta' and inverted functionality

--- a/html/settings.html
+++ b/html/settings.html
@@ -943,7 +943,7 @@ $('document').ready(function() {
                         </input>
                     </label>
                     <p>
-                        Show the 'stable' check-box under the Plugin Store, allowing it to be unselected, so beta plugins can be installed.<br/>
+                        Show the 'beta' check-box under the Plugin Store, allowing it to be selected, so beta plugins can be installed.<br/>
                         Note that beta plugins are unsupported. If you share a pedalboard containing beta plugins, it will only
 						be available to users that explicity accept pedalboards with beta plugins.<br/>
                         Expect things to break!
