Improved 'show beta plugins' description in settings.html

--- a/html/settings.html
+++ b/html/settings.html
@@ -943,10 +943,10 @@ $('document').ready(function() {
                         </input>
                     </label>
                     <p>
-                        Show the 'beta' check-box under the Plugin Store, allowing it to be selected, so beta plugins can be installed.<br/>
-                        Note that beta plugins are unsupported. If you share a pedalboard containing beta plugins, it will only
-						be available to users that explicity accept pedalboards with beta plugins.<br/>
-                        Expect things to break!
+                        Show option to list 'beta' plugins in the Plugin Store.<br/>
+                        Note that beta plugins can be unstable and cause crashes. If you share a pedalboard containing beta plugins, it will only
+						be available to users that explicitly accept pedalboards with beta plugins.<br/>
+                        Just remember: things can break!
                     </p>
                 </form>
             </div>
