Renamed filter to 'Show beta plugins'

--- a/html/index.html
+++ b/html/index.html
@@ -667,7 +667,7 @@ $('document').ready(function() {
                 </div>
                 <div class="control-group mod-hidden">
                     <input type="checkbox" name="unstable" id="cloud-plugins-stable" />
-                    <label for="cloud-plugins-stable">Show beta</label>
+                    <label for="cloud-plugins-stable">Show beta plugins</label>
                 </div>
                 <ul class="categories list list-unstyled">
                     <li id="cloud-plugin-tab-All">All</li>
