fix: share button being blocked by adblockers

--- a/html/index.html
+++ b/html/index.html
@@ -128,7 +128,7 @@ $('document').ready(function() {
         bankBox: $('#bank-library'),
         bankBoxTrigger: $('#main-menu #mod-bank'),
         bankList: $('#bank-list'),
-        shareButton: $('#pedalboard-info .js-share'),
+        shareButton: $('#pedalboard-info .js-cloud'),
         shareWindow: $('#share-window'),
         presetSaveBox: $('#save-preset'),
         devicesIcon: $('#mod-devices'),
@@ -171,7 +171,7 @@ $('document').ready(function() {
         $('#mod-bypassRight').hide()
         $('#mod-cloud-plugins').hide()
         $('#mod-update').hide()
-        $('#pedalboard-info').find('.js-share').hide()
+        $('#pedalboard-info').find('.js-cloud').hide()
 
         // show other stuff to make it less empty
         $('#mod-xruns').show()
@@ -465,7 +465,7 @@ $('document').ready(function() {
                     <button class="js-reset">New Pedalboard</button>
                     <button class="js-save">Save</button>
                     <button class="js-save-as">Save as</button>
-                    <button class="js-share">Share</button>
+                    <button class="js-cloud">Share</button>
                 </div>
             </div>
             <!-- END PEDALBOARD-SETTINGS -->
