Plugin info window basically functioning with new PluginDB

--- a/html/index.html
+++ b/html/index.html
@@ -231,6 +231,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/notification.js?v={{version}}"></script>
 <script type="text/javascript" src="js/installation.js?v={{version}}"></script>
 <script type="text/javascript" src="js/desktop.js?v={{version}}"></script>
+<script type="text/javascript" src="js/plugindb.js?v={{version}}"></script>
 <script type="text/javascript" src="js/pedalboard.js?v={{version}}"></script>
 <script type="text/javascript" src="js/pedalboards.js?v={{version}}"></script>
 <script type="text/javascript" src="js/banks.js?v={{version}}"></script>
