Renamed the HTML button to 'Snapshot'

--- a/html/index.html
+++ b/html/index.html
@@ -449,8 +449,8 @@ $('document').ready(function() {
             <div id="pedalboard-info">
                 <h1 class="top bottom {{titleblend}}">{{fulltitle}}</h1>
                 <div class="actions">
-                    <button class="js-preset" id="js-preset-enabler">Presets</button>
-                    <button class="js-preset menu-trigger mod-hidden" id="js-preset-menu">Presets</button>
+                    <button class="js-preset" id="js-preset-enabler">Snapshots</button>
+                    <button class="js-preset menu-trigger mod-hidden" id="js-preset-menu">Snapshots</button>
                     <ul class="drop-menu clearfix js-pedalboard-presets-menu" style="cursor:pointer;">
                         <li class="js-preset-save">Save</li>
                         <li class="js-preset-save-as">Save as</li>
