Renamed the file 'pedalpresetsmanage.js' to 'snapshot.js'.

--- a/html/index.html
+++ b/html/index.html
@@ -235,7 +235,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/effects.js?v={{version}}"></script>
 <script type="text/javascript" src="js/cloudplugin.js?v={{version}}"></script>
 <script type="text/javascript" src="js/mididevices.js?v={{version}}"></script>
-<script type="text/javascript" src="js/pedalpresetsmanage.js?v={{version}}"></script>
+<script type="text/javascript" src="js/snapshot.js?v={{version}}"></script>
 <script type="text/javascript" src="js/hardware.js?v={{version}}"></script>
 <script type="text/javascript" src="js/share.js?v={{version}}"></script>
 <script type="text/javascript" src="js/networkstatus.js?v={{version}}"></script>
