Renamed menu headings.

--- a/html/index.html
+++ b/html/index.html
@@ -325,10 +325,10 @@ $('document').ready(function() {
         </div>
         <!-- END SAVE PEDALBOARD WINDOW -->
 
-        <!-- SAVE PRESET WINDOW -->
+        <!-- SAVE SNAPSHOTS WINDOW -->
         <div id="save-preset" class="save-popup mod-hidden" style="z-index:1001;">
             <div class="mod-box">
-                <h1 class="pull-left">Saving Preset</h1><span class="js-cancel-saving close">&times;</span>
+                <h1 class="pull-left">Saving Snapshot</h1><span class="js-cancel-saving close">&times;</span>
                 <form class="bottom">
                     <div class="clearfix"></div>
                     <div class="controls">
@@ -342,7 +342,7 @@ $('document').ready(function() {
                 </form>
             </div>
         </div>
-        <!-- END SAVE PRESET WINDOW -->
+        <!-- END SAVE SNAPSHOT WINDOW -->
 
         <!-- PEDALBOARD SHARE WINDOW -->
         <div id="share-window" class="save-popup mod-hidden">
@@ -499,10 +499,10 @@ $('document').ready(function() {
         </div>
         <!-- MIDI DEVICE LIST WINDOW -->
 
-        <!-- PEDALBOARD PRESETS -->
+        <!-- PEDALBOARD SNAPSHOTS -->
         <div id="pedal-presets-window" class="save-popup mod-hidden">
             <div class="mod-box" style="width: 400px">
-                <h1 class="pull-left">Load / Manage presets</h1><span class="js-cancel close">&times;</span>
+                <h1 class="pull-left">Load / Manage snapshots</h1><span class="js-cancel close">&times;</span>
                 <form class="bottom">
                     <div class="controls clearfix">
                         <input type="text" name="pedal-presets-list" value="" id="pedal-presets-list-input"/>
@@ -517,7 +517,7 @@ $('document').ready(function() {
                 </form>
             </div>
         </div>
-        <!-- END PEDALBOARD PRESETS -->
+        <!-- END PEDALBOARD SNAPSHOTS -->
 
         <!-- CC DEVICE UPDATE WINDOW -->
         <div id="cc-device-update-window" class="save-popup mod-hidden">
