Removed the navigation configuration from the 'Banks' site. 'bankAddressing' is now 'bankTitle'.
I also removed commented code from 'html/js/banks.js'.

--- a/html/index.html
+++ b/html/index.html
@@ -752,19 +752,9 @@ $('document').ready(function() {
 
         <!-- BANK-PEDALBOARDS -->
         <div id="bank-edit">
-            <div id="bank-addressings" class="mod-hidden">
+            <div id="bank-title" class="mod-hidden">
                 <h1>Untitled</h1>
-                <form class="form">
-                    <label>
-                        <input type="radio" name="bank-navigation" autocomplete="off" id="js-navigate-footswitches" /> Navigate pedalboards using footswitches
-                    </label>
-                    <br/>
-                    <label>
-                        <input type="radio" name="bank-navigation" autocomplete="off" checked="checked" id="js-navigate-midi" /> Navigate pedalboards using MIDI program, channel: &nbsp;
-                        <input type="number" id="js-navigate-midi-channel" value="1" min="1" max="16" step="1" style="box-sizing:border-box;width:40px;" />
-                    </label>
-                </form>
-            </div>
+	    </div>
             <div id="bank-pedalboards" class="grid-selected"></div>
         </div>
         <!-- END BANK-PEDALBOARDS -->
