Changed transport state and section UI with (placeholder) icons

--- a/html/index.html
+++ b/html/index.html
@@ -873,7 +873,8 @@ $('document').ready(function() {
 
                 <div class="mod-switch" id="mod-switch-transport-play">
                     <span class="mod-switch-title">Transport</span>
-                    <div class="mod-switch-image" mod-widget="switch"></div>
+                    <div class="mod-switch-image stop" mod-widget="switch"></div>
+                    <div class="mod-switch-image play" mod-widget="switch"></div>
                     <div class="mod-address"></div>
                 </div>
 
