Changed Sync mode label to Internal

--- a/html/index.html
+++ b/html/index.html
@@ -845,7 +845,7 @@ $('document').ready(function() {
                 <div class="mod-enumerated" id="mod-enum-transport-sync-mode">
                     <span class="mod-enumerated-title">Sync Mode</span>
                     <div class="mod-enumerated-list">
-                        <div mod-sync-mode="none">None / Addressings</div>
+                        <div mod-sync-mode="none">Internal</div>
                         <div class="mod-midi-icon" mod-sync-mode="midi-clock-slave">
                           Clock Slave
                         </div>
