Moved architecture configuration to settings.py

--- a/html/index.html
+++ b/html/index.html
@@ -65,6 +65,7 @@
     CONTROLCHAIN_URL = '{{controlchain_url}}'
     LV2_PLUGIN_DIR   = '{{lv2_plugin_dir}}'
     VERSION          = '{{version}}'
+    ARCHITECTURE     = '{{architecture}}'
     var SAMPLERATE   = {{sampleRate}}
     var NOTIFICATIONS_ENABLED = true
     var HARDWARE_PROFILE = JSON.parse(atob('{{hardware_profile}}'))
