--- a/html/index.html
+++ b/html/index.html
@@ -486,14 +486,26 @@ $('document').ready(function() {
 
         <!-- MIDI DEVICE LIST WINDOW -->
         <div id="midi-ports-window" class="save-popup mod-hidden">
-            <div class="mod-box">
+            <div class="mod-box" id="midi-ports-box">
                 <h1>MIDI Ports List</h1>
                 <form class="bottom">
+                  <fieldset>
+                    <div><label>
+                        <input type="radio" autocomplete="off" name="midi-mode" id="midi-mode-aggregate" checked>
+                            Aggregated Mode
+                        </input>
+                    </label></div>
+                    <div><label>
+                        <input type="radio" autocomplete="off" name="midi-mode" id="midi-mode-legacy">
+                            Legacy mode
+                        </input>
+                    </label></div>
                     <div class="controls clearfix" id="midi-ports-list"></div>
                     <div class="controls actions">
                         <button class="js-cancel btn btn-danger">Cancel</button>
                         <button class="js-submit btn btn-success">Save</button>
                     </div>
+                    </fieldset>
                 </form>
             </div>
         </div>
