--- a/html/index.html
+++ b/html/index.html
@@ -490,16 +490,20 @@ $('document').ready(function() {
                 <h1>MIDI Ports List</h1>
                 <form class="bottom">
                   <fieldset>
-                    <div><label>
-                        <input type="radio" autocomplete="off" name="midi-mode" id="midi-mode-aggregate" checked>
+                    <div>
+                      <label>
+                        <input type="radio" autocomplete="off" name="midi-mode" value="aggregated" id="midi-mode-aggregate">
                             Aggregated Mode
                         </input>
-                    </label></div>
-                    <div><label>
-                        <input type="radio" autocomplete="off" name="midi-mode" id="midi-mode-legacy">
-                            Legacy mode
-                        </input>
-                    </label></div>
+                      </label>
+                    </div>
+                    <div>
+                      <label>
+                          <input type="radio" autocomplete="off" name="midi-mode" value="legacy" id="midi-mode-legacy">
+                              Legacy mode
+                          </input>
+                      </label>
+                    <div>
                     <div class="controls clearfix" id="midi-ports-list"></div>
                     <div class="controls actions">
                         <button class="js-cancel btn btn-danger">Cancel</button>
