Rename 'Clock Slave' sync mode to 'MIDI'

--- a/html/index.html
+++ b/html/index.html
@@ -847,7 +847,7 @@ $('document').ready(function() {
                     <div class="mod-enumerated-list">
                         <div mod-sync-mode="none">Internal</div>
                         <div class="mod-midi-icon" mod-sync-mode="midi-clock-slave">
-                          Clock Slave
+                          MIDI
                         </div>
                         <div mod-sync-mode="link">Ableton&trade; Link</div>
                     </div>
