Fix bug with transport status changing midi sync mode to none

--- a/html/index.html
+++ b/html/index.html
@@ -846,7 +846,7 @@ $('document').ready(function() {
                     <span class="mod-enumerated-title">Sync Mode</span>
                     <div class="mod-enumerated-list">
                         <div mod-sync-mode="none">Internal</div>
-                        <div class="mod-midi-icon" mod-sync-mode="midi-clock-slave">
+                        <div class="mod-midi-icon" mod-sync-mode="midi_clock_slave">
                           MIDI
                         </div>
                         <div mod-sync-mode="link">Ableton&trade; Link</div>
