--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
     CONTROLCHAIN_URL = '{{controlchain_url}}'
     LV2_PLUGIN_DIR   = '{{lv2_plugin_dir}}'
     VERSION          = '{{version}}'
-    ARCHITECTURE     = '{{architecture}}'
+    BIN_COMPAT       = '{{bin_compat}}'
     var SAMPLERATE   = {{sampleRate}}
     var NOTIFICATIONS_ENABLED = true
     var HARDWARE_PROFILE = JSON.parse(atob('{{hardware_profile}}'))
