--- a/html/index.html
+++ b/html/index.html
@@ -600,7 +600,7 @@ $('document').ready(function() {
         <div id="mod-buffersize" class="icon mod-hidden">{{bufferSize}} frames</div>
         <div id="mod-bypassRight" class="icon mod-bypass">Bypass 2</div>
         <div id="mod-bypassLeft" class="icon mod-bypass">Bypass 1</div>
-        <div id="mod-show-midi-port" class="icon">MIDI Ports</div>
+        <div id="mod-show-midi-port" class="icon mod-hidden">MIDI Ports</div> <!-- hidden for now -->
         <div id="mod-transport-icon" class="icon">
             <span>---.-- BPM</span>
         </div>
