Add CPU freq and temp monitor; Fix settings tooltip; Re-run grunt
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -593,6 +593,7 @@ $('document').ready(function() {
             </div>
             <p class="progress-title" id="cpu-bar-text">cpu</p>
         </div>
+        <div id="mod-cpu-stats" class="icon mod-hidden">0 GHz / 0 &deg;C</div>
         <div id="mod-xruns" class="icon mod-hidden">0 Xruns</div>
         <div id="mod-buffersize" class="icon mod-hidden">{{bufferSize}} frames</div>
         <div id="mod-bypassRight" class="icon mod-bypass">Bypass 2</div>
