Implement changing CPU clock (dev-mode only)
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -142,6 +142,7 @@ $('document').ready(function() {
         bypassRightButton: $("#mod-bypassRight"),
         bufferSizeButton: $('#mod-buffersize'),
         xrunsButton: $('#mod-xruns'),
+        cpuStatsButton: $('#mod-cpu-stats'),
     })
 
     if ('{{bundlepath}}' && '{{title}}') {
