Show a little watermark if using dev-api, disabled by default
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -484,7 +484,7 @@ $('document').ready(function() {
         <!-- END PEDALBOARD-ACTIONS -->
 
         <!-- PEDALBOARD-DASHBOARD -->
-        <div id="pedalboard-dashboard"></div>
+        <div id="pedalboard-dashboard" class="{{dev_api_class}}"></div>
         <!-- END PEDALBOARD-DASHBOARD -->
 
         <!-- MIDI DEVICE LIST WINDOW -->
