--- a/html/index.html
+++ b/html/index.html
@@ -74,6 +74,8 @@
     var DEFAULT_PEDALBOARD = '{{default_pedalboard}}'
     var FAVORITES = {{favorites}}
     var PREFERENCES = {{preferences}}
+    var PAGES_NB = {{pages_nb}}
+    var PAGES_CB = {{pages_cb}}
     var DEBUG = true;
     if (!DEBUG) {
         console = console || {}
