Re-enable midi legacy mode

--- a/html/index.html
+++ b/html/index.html
@@ -502,7 +502,7 @@ $('document').ready(function() {
                         </input>
                       </label>
                     </div>
-                    <div class="mod-hidden"> <!-- Temporally hidden -->
+                    <div>
                       <label>
                           <input type="radio" autocomplete="off" name="midi-mode" value="legacy" id="midi-mode-legacy">
                               Legacy mode
