--- a/html/index.html
+++ b/html/index.html
@@ -504,7 +504,7 @@ $('document').ready(function() {
                     </div>
                     <div>
                       <label>
-                          <input type="radio" autocomplete="off" name="midi-mode" value="legacy" id="midi-mode-legacy">
+                          <input type="radio" autocomplete="off" name="midi-mode" value="separated" id="midi-mode-separated">
                               Legacy mode
                           </input>
                       </label>
